--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             </div>
         </header>
 
+        <!-- Digital Clock Section -->
+        <section class="clock-section">
+            <div id="current-time" class="clock"></div>
+        </section>
+
+
         <!-- Projects Section -->
         <section class="projects">
             <h2>Featured Projects</h2>
